test/libyul/yulSyntaxTests/switch_invalid_expr_2.yul
{
    switch mload
    case 1 {}
    default {}
}
// ----
// DeclarationError 8198: (13-18): Identifier not found.
